Some errors fixing