@@ -77,7 +77,7 @@ public class ComponentCreationPopup extends PopupScreen {
                     this.addEntry(new ComponentCreationListEntry(componentBuilder));
             }
 
-            this.setSelected(this.getEntries().isEmpty() ? null : this.getEntries().get(0));
+            this.setSelected(this.getEntries().isEmpty() ? null : this.getEntries().getFirst());
         }
 
         protected static class ComponentCreationListEntry extends Entry {
